--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
-2.0/arribada_tools.egg-info/
-2.0/build/
-2.0/dist/
+2.0/python_tools/arribada_tools.egg-info/
+2.0/python_tools/dist/
+2.0/python_tools/build/
